// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`argument completions > returns dry-run option for empty prefix 1`] = `
[
  {
    "description": "Preview discovery without offering to write models.json",
    "label": "--dry-run",
    "value": "--dry-run",
  },
]
`;

exports[`argument completions > returns dry-run option for matching prefix 1`] = `
[
  {
    "description": "Preview discovery without offering to write models.json",
    "label": "--dry-run",
    "value": "--dry-run",
  },
]
`;

exports[`confirm-to-write > does not update models.json when confirmation is declined 1`] = `
[
  {
    "message": "requesty-discover: Discovered 1 Requesty model(s).
Models diff summary.",
    "type": "info",
  },
  {
    "message": "requesty-discover: Left models.json unchanged.",
    "type": "info",
  },
]
`;

exports[`discovery workflow > does not update models.json and notifies error on full error 1`] = `
[
  {
    "message": "requesty-discover: Discovered 2 Requesty model(s).
Health check summary.
Models diff summary.
Full health check log: /tmp/pi-requesty-home/.pi/agent/requesty-health-check.log
Left models.json unchanged.",
    "type": "error",
  },
]
`;

exports[`discovery workflow > does nothing when env load fails 1`] = `
[
  {
    "message": "requesty-discover: failed to load env: env load failed",
    "type": "error",
  },
]
`;

exports[`discovery workflow > emits notification and does not update models.json on dry-run 1`] = `
[
  {
    "message": "requesty-discover: Discovered 1 Requesty model(s).
Models diff summary.
Dry run: left models.json unchanged.",
    "type": "info",
  },
]
`;

exports[`discovery workflow > notifies full error and clears status 1`] = `
[
  {
    "message": "requesty-discover: Discovery failed: models.json exploded",
    "type": "error",
  },
]
`;

exports[`discovery workflow > notifies full error for sth not deriving from Error 1`] = `
[
  {
    "message": "requesty-discover: Discovery failed: this is not an error",
    "type": "error",
  },
]
`;

exports[`discovery workflow > notifies full error on async rejections 1`] = `
[
  {
    "message": "requesty-discover: Discovery failed: requesty has a bad day trying to read its models",
    "type": "error",
  },
]
`;

exports[`discovery workflow > updates models.json and notifies info on no failures 1`] = `
[
  {
    "message": "requesty-discover: Discovered 2 Requesty model(s).
Health check summary.
Models diff summary.
Full health check log: /tmp/pi-requesty-home/.pi/agent/requesty-health-check.log",
    "type": "info",
  },
  {
    "message": "requesty-discover: Updated models.json. Run /reload to use the changes.",
    "type": "info",
  },
]
`;

exports[`discovery workflow > updates passing models and notifies warning on partial failures 1`] = `
[
  {
    "message": "requesty-discover: Discovered 2 Requesty model(s).
Health check summary.
Models diff summary.
Full health check log: /tmp/pi-requesty-home/.pi/agent/requesty-health-check.log",
    "type": "warning",
  },
  {
    "message": "requesty-discover: Updated models.json. Run /reload to use the changes.",
    "type": "info",
  },
]
`;

exports[`usage status > edge cases > shows env load errors on session_start 1`] = `
[
  {
    "message": "requesty-discover: failed to load env: I am error",
    "type": "error",
  },
]
`;
